# MySalary

./: .env  Makefile  README.md  alembic.ini  compose.yml  main.py  pyproject.toml
src/: api.py  crud.py  db.py  models.py  schemas.py
src/alembic/: env.py
src/alembic/versions/: b4a6aa9866fe_first_migration.py  c1a67edc46de_first_migration.py
src/auth/: auth.py  database.py  manager.py  models.py  schemas.py
tests/: test_api.py
